# qcrypt

./: .gitignore  README.md  action.yml  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: example-qcrypt-scan.yml
docs/: HANDOFF.md
python/: README.md  pyproject.toml
python/qcrypt_scan/: __init__.py  cli.py
src/: cli.ts  index.ts  types.ts
src/analyzers/: agility.ts  context.ts  migration.ts  readiness.ts  usage.ts
src/api/: server.ts
src/benchmarks/: encrypt-decrypt.ts  hash.ts  index.ts  sign-verify.ts
src/ci/: annotations.ts  detect.ts  diff.ts  exit.ts  github-comment.ts  index.ts  init.ts  sarif.ts  summary.ts
src/compliance/: assess.ts  frameworks.ts  index.ts
src/config/: qcrypt-config.ts
src/db/: index.ts  projects.ts  scans.ts
src/education/: explanations.ts
src/github/: scanner.ts
src/migrate/: cli.ts  index.ts  scan-runner.ts
src/reference/: nist-deadlines.ts  pqc-data.ts  quantum-estimates.ts
src/report/: html.ts  index.ts
src/reporters/: bench-terminal.ts  cbom.ts  json.ts  terminal.ts
src/rules/: algorithms.ts  patterns.ts
src/scanners/: certificates.ts  config-files.ts  dependencies.ts  source-code.ts
test/: types-check.test.ts
test/analyzers/: agility.test.ts  migration.test.ts  readiness.test.ts
test/benchmarks/: hash.test.ts  index.test.ts  sign-verify.test.ts
test/ci/: exit.test.ts
test/compliance/: assess.test.ts
test/config/: qcrypt-config.test.ts
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+60 files in other folders)
